# neptune

./: .gitignore  README.md  functions.py  install.py  neptune  pyproject.toml  reinstall.py  remove.py  sync.py  update.py
doc/: config.yaml  repositories.yaml
src/neptune/: __init__.py  bootstrap.py  functions.py  install.py  reinstall.py  remove.py  settings.py  sync.py  update.py
src/neptune/classes/: Frontend.py  NeptuneSettings.py  Package.py  Repository.py  System.py  Utils.py
tests/: env-to-yaml.py  test.sh
