[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
dependencies=["requests", "PyYAML", "rich", "packaging"]
name = "neptune"
version = "0.3.0"
authors = [
  { name="Rahul Chandra", email="rahul@tucanalinux.org" },
]
description = "A fast lightweight package manager written in Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: GPLv3 License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Tucana-Linux/neptune"
Issues = "https://github.com/Tucana-Linux/neptune/issues"
[project.scripts]
neptune = "neptune:main"
neptune-bootstrap = "neptune.bootstrap:bootstrap"
